# yt-cli-live

./: Cargo.toml  LICENSE  README.md
.github/workflows/: CI.yml
models/: README.md
src/: audio.rs  main.rs  speech.rs  util.rs  vad.rs  zh.rs
tests/: test.ts
