[package]
name = "yt-cli-live"
version = "0.1.0"
edition = "2021"

[dependencies]
mpeg2ts = "0.2"
wait-timeout = "0.2.0"
whisper-rs = { git = "https://github.com/ckaznable-archive/whisper-rs", branch = "master" }
symphonia = { version = "0.5.2", features=["aac"] }
clap = { version = "4.2.5", features = ["derive"] }


[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*
