[package]
name = "yt-cli-live"
version = "0.1.1"
edition = "2021"
authors = ["ckaznable <kami25565@gmail.com>"]
description = "youtube text streaming in cli"
repository = "https://github.com/ckaznable/yt-cli-live"
license = "MIT"
keywords = ["youtube", "cli", "whisper"]

[dependencies]
whisper-rs = { git = "https://github.com/ckaznable-archive/whisper-rs.git", branch = "master" }
symphonia = { version = "0.5.2", features=["aac", "mpa"] }
clap = { version = "4.2.7", features = ["derive"] }
ringbuf = "0.3.3"
tract-onnx = "0.17.9"
rubato = "0.13.0"
owo-colors = "3.5.0"
yt_tsu = "0.1.0"
opencc-rust = { version = "1.1.15", optional = true }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary*

[features]
default = []
zh = ["opencc-rust/static-dictionaries"]
